# feverfall

./: 01_research_findings_summary.MD  02_game_design_technical_spec.MD  03_parallel_subagent_development_plan.MD  04_standalone_orchestrator_prompt.MD  06_checkpoint6_devplan.MD  06_checkpoint6_resumption_prompt.MD  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ORCHESTRATOR_STATE.md  README.md  cliff.toml  handoff.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/feedback_events/: Cargo.toml
crates/feedback_events/src/: lib.rs
crates/game_rules/: Cargo.toml
crates/game_rules/src/: lib.rs
crates/rpg_mode/: Cargo.toml
crates/rpg_mode/src/: lib.rs
crates/rpg_mode/tests/: mode_separation.rs
crates/run_mode/: Cargo.toml
crates/run_mode/src/: lib.rs
crates/run_mode/tests/: mode_separation.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: authored_board_corpus.rs  common.rs  first_bounce_consistency.rs  multi_shot_replay.rs  trajectory_sampling.rs
game/: Cargo.toml
game/assets/audio/: ATTRIBUTION.md
game/assets/content/balls/act1/: anchor_orb.toml  basic_orb.toml  ember_orb.toml  frost_orb.toml  ghost_orb.toml  glass_orb.toml  heavy_orb.toml  magnet_orb.toml  rubber_orb.toml  splitter_orb.toml
game/assets/content/balls/c4/: drift_orb.toml  echo_orb.toml  fever_orb.toml  iron_orb.toml  lead_orb.toml  mirror_orb.toml  quartz_orb.toml  spark_orb.toml  storm_orb.toml  vine_orb.toml
game/assets/content/boards/: feel_clusters_01.json  feel_clusters_stone_01.json  feel_fan_01.json  feel_fan_cross_01.json  feel_fortress_stone_01.json  feel_lanes_01.json  feel_rings_01.json  feel_spiral_01.json  feel_wave_01.json  feel_wave_gate_01.json  rpg_ch1_01.json  rpg_ch1_02.json  rpg_ch1_03.json  rpg_ch1_04.json  rpg_ch1_05.json
game/assets/content/boards/act1_boss_01/: board.json
game/assets/content/boards/c4_act1/: elite_05.json  elite_10.json  normal_01.json  normal_02.json  normal_03.json  normal_04.json  normal_06.json  normal_07.json  normal_08.json  normal_09.json  normal_11.json  normal_12.json
game/assets/content/boards/c4_act2/: elite_05.json  elite_10.json  normal_01.json  normal_02.json  normal_03.json  normal_04.json  normal_06.json  normal_07.json  normal_08.json  normal_09.json  normal_11.json  normal_12.json  normal_13.json
game/assets/content/boards/c4_act3/: elite_05.json  elite_10.json  normal_01.json  normal_02.json  normal_03.json  normal_04.json  normal_06.json  normal_07.json  normal_08.json  normal_09.json  normal_11.json  normal_12.json  normal_13.json
game/assets/content/boards/c4_bosses/: act1_boss_02.json  act1_boss_03.json  act1_boss_04.json  act2_boss_05.json  act2_boss_06.json  act2_boss_07.json  act2_boss_08.json  act3_boss_09.json  act3_boss_10.json  act3_boss_11.json  act3_boss_12.json
game/assets/content/boards/c4_rpg_ch1/: board_01.json  board_02.json  board_03.json  board_04.json  board_05.json
game/assets/content/boards/c4_rpg_ch2/: board_01.json  board_02.json  board_03.json
game/assets/content/boards/c4_rpg_ch3/: board_01.json  board_02.json  board_03.json
game/assets/content/boards/c4_rpg_ch4/: board_01.json  board_02.json
game/assets/content/boards/c4_rpg_ch5/: board_01.json  board_02.json
game/assets/content/relics/act1/: blue_spark_wire.toml  bumper_seed.toml  cartographer_thread.toml  catch_streak_sash.toml  combo_abacus.toml  copper_interest.toml  ghost_thread.toml  green_relay.toml  heavy_core.toml  lane_lantern.toml  magnet_bell.toml  orange_lacquer.toml  purple_pin.toml  rim_ricochet.toml  risk_purse.toml  rubber_glaze.toml  shopkeepers_stamp.toml  splitter_charm.toml  stone_chisel.toml  wide_cup_rim.toml
game/assets/content/relics/act2/: blue_circuit.toml  combo_ledger.toml  comet_core.toml  curse_dividend.toml  echo_lens.toml  fever_receipt.toml  green_battery.toml  hazard_map.toml  lane_switch.toml  mercy_pocket.toml  orange_whetstone.toml  phase_shell.toml  purple_anchor.toml  return_spring.toml  rim_tuning_fork.toml  sidewall_garden.toml  spark_tithe.toml  splinter_mold.toml  stone_survey.toml  wide_halo.toml
game/assets/content/relics/act3/: bomb_needle.toml  bucket_gyroscope.toml  bumper_graft.toml  catch_compass.toml  deadzone_chart.toml  freefall_net.toml  ghost_ink.toml  glimmer_fuse.toml  interest_lantern.toml  iron_arc.toml  jackpot_seed.toml  magnet_keel.toml  merchant_oath.toml  orbit_thread.toml  reroll_coupon.toml  splitter_seed.toml  stone_moss.toml  twin_charge.toml  void_bounce.toml  windmill_key.toml
game/assets/content/rpg_gear/: bankshot_launcher.json  basic_core.json  luck_trinket.json  magnet_core.json  resonance_charm.json  starter_launcher.json
game/assets/content/rpg_gear/c4/: basket_01.json  basket_02.json  basket_03.json  basket_04.json  basket_05.json  basket_06.json  basket_07.json  basket_08.json  basket_09.json  basket_10.json  charm_03.json  charm_04.json  charm_05.json  charm_06.json  charm_07.json  charm_08.json  charm_09.json  charm_10.json  core_ball_03.json  core_ball_04.json  core_ball_05.json  core_ball_06.json  core_ball_07.json  core_ball_08.json  core_ball_09.json  core_ball_10.json  launcher_03.json  launcher_04.json  launcher_05.json  launcher_06.json  launcher_07.json  launcher_08.json  launcher_09.json  launcher_10.json
game/assets/content/rpg_skills/: catch_magnet.json  zen_reroute.json
game/assets/fonts/: ATTRIBUTION.md  OFL.txt
game/assets/sprites/: ATTRIBUTION.md
game/src/: feel_test.rs  main.rs  rpg_chapter1.rs  vertical_slice.rs
game/src/plugins/: feedback.rs  feel_test.rs  mod.rs  node_map_ui.rs  reward_ui.rs  run_summary_ui.rs
game/src/plugins/audio/: mod.rs
game/src/plugins/debug/: mod.rs
game/src/plugins/render/: mod.rs
game/src/plugins/screens/: mod.rs
game/src/plugins/ui/: mod.rs
game/src/plugins/vfx/: mod.rs
tools/balance_sim/: Cargo.toml
tools/balance_sim/src/: main.rs  metrics.rs  roguelite.rs  rpg.rs
tools/replay_runner/: Cargo.toml
tools/replay_runner/src/: main.rs
(+92 files in other folders)
