[package]
name = "physics_core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

# Keep this cargo-fuzz package out of the root FeverFall workspace so normal
# `cargo test --workspace` runs are not affected by nightly-only fuzz targets.
[workspace]
members = ["."]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"] }
content_schema = { path = "../crates/content_schema" }
libfuzzer-sys = "0.4"
physics_core = { path = "../crates/physics_core" }
serde_json = "1.0"

[[bin]]
name = "authored_board_corpus"
path = "fuzz_targets/authored_board_corpus.rs"
test = false
doc = false
bench = false

[[bin]]
name = "first_bounce_consistency"
path = "fuzz_targets/first_bounce_consistency.rs"
test = false
doc = false
bench = false

[[bin]]
name = "trajectory_sampling"
path = "fuzz_targets/trajectory_sampling.rs"
test = false
doc = false
bench = false

[[bin]]
name = "multi_shot_replay"
path = "fuzz_targets/multi_shot_replay.rs"
test = false
doc = false
bench = false
