[package]
name = "feverfall_game"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
board_gen = { path = "../crates/board_gen" }
content_schema = { path = "../crates/content_schema" }
feedback_events = { path = "../crates/feedback_events" }
game_rules = { path = "../crates/game_rules" }
physics_core = { path = "../crates/physics_core" }
run_mode = { path = "../crates/run_mode" }
rpg_mode = { path = "../crates/rpg_mode" }
