[package]
name = "feedback_events"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
content_schema = { path = "../content_schema" }
game_rules = { path = "../game_rules" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
