[package]
name = "game_rules"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
content_schema = { path = "../content_schema" }
physics_core = { path = "../physics_core" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
