[package]
name = "rpg_mode"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
content_schema = { path = "../content_schema" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
feedback_events = { path = "../feedback_events" }
game_rules = { path = "../game_rules" }
physics_core = { path = "../physics_core" }
run_mode = { path = "../run_mode" }
telemetry = { path = "../telemetry" }
