[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
content_schema = { path = "../content_schema" }
game_rules = { path = "../game_rules" }
physics_core = { path = "../physics_core" }
serde.workspace = true
serde_json.workspace = true
