[package]
name = "balance_sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
board_gen = { path = "../../crates/board_gen" }
content_schema = { path = "../../crates/content_schema" }
physics_core = { path = "../../crates/physics_core" }
